Atualizando o código para o Render

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       color: #fff;
       padding: 5px 10px;
       border-radius: 10px;
-      display: inline-block;
-      margin: 3px 3px 0 0;
+      display: block;
+      margin: 3px 0;
       font-size: 0.75rem;
     }
 
@@ -190,7 +190,6 @@
     <!-- FOTOS -->
     <div class="fotos">
       <img src="minhafoto.jpg" alt="Minha foto">
-     
     </div>
 
     <label>Nomes</label>
@@ -267,9 +266,14 @@
     function gerarImagem() {
       html2canvas(document.getElementById("area-foto"), { scale: 2 }).then(canvas => {
         const link = document.createElement("a");
-        link.download = "turnos-natal-azul.png";
-        link.href = canvas.toDataURL("image/png");
-        link.click();
+        link.download = "turnos-natal-azul.jpg";  // Alterando o nome para ".jpg"
+        link.href = canvas.toDataURL("image/jpeg");  // Mudando para JPG
+
+        // Criar link para WhatsApp com o texto e o link da imagem
+        const whatsappLink = `https://wa.me/?text=Confira%20meus%20turnos%20de%20descanso%20natalinos:%20${encodeURIComponent(link.href)}`;
+
+        // Redireciona para WhatsApp
+        window.open(whatsappLink, "_blank");
       });
     }
 
@@ -289,4 +293,3 @@
 
 </body>
 </html>
-
