Atualiza site com música e animação

--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
     <button class="btn-img" onclick="gerarImagem()">📸 Baixar imagem JPG</button>
   </div>
 
+
+
   
+<audio id="musicaNatal" loop preload="auto">
+  <source src="musica-natal.webm" type="audio/webm">
+  Seu navegador não suporta áudio.
+</audio>
+
+<button id="btnMusica">🎶 Ativar música</button>
+
 
 </body>
 </html>
